# test_task_4

./: .flake8  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_39999f51aaea_init_project_models_credit_dictionary_.py  2023_09_24_1933_90a417fdf674_init_project_models_credit_dictionary_.py
credit/: models.py  router.py  schemas.py
crud/: __init__.py  base.py  crud_credit.py  crud_dictionary.py  crud_payment.py  crud_plan.py
dictionary/: models.py  schemas.py
management/: __init__.py  add_credit.py  add_dictionary.py  add_payment.py  add_plan.py  add_user.py  csv_read.py
payment/: models.py  schemas.py
plan/: models.py  router.py  schemas.py  utils.py
settings/: __init__.py  database.py  project.py
tests/: conftest.py
tests/api/: test_credits.py  test_plans.py
user/: __init__.py  models.py  schemas.py
